--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<h1 th:text="${title}">Insert title here</h1>
-		<p>This is a sample page.</p>
+		<p th:text="${name}">name</p>
+		<p th:text="${email}">email</p>
 	</body>
 </html>
