--- a/src/main/resources/templates/inquiry/form.html
+++ b/src/main/resources/templates/inquiry/form.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8">
 		<title th:text="${title}">Insert title here</title>
 	</head>
 	<body>
 		<h1 th:text="${title}">title</h1>
-		<form method="post" action="#" th:action="@{/inquiry/confirm}">
+		<form method="post" action="#" th:action="@{/inquiry/confirm}" th:object="${inquiryForm}">
 			<label for="name">お名前：</label>
-			<input id="name" name="name" type="text"><br>
+			<input id="name" name="name" type="text" th:value="*{name}"><br>
+			<div th:if="${#fields.hasErrors('name')}" th:errors="*{name}"}></div>
 			
 			<label for="email">メール：</label>
-			<input id="email" name="email" type="text"><br>
+			<input id="email" name="email" type="text" th:value="*{email}"><br>
+			<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"}></div>
 			
 			<label for="contents">詳細：</label>
-			<textarea name="contents" id="contents" rows="3" cols="40"></textarea><br>
+			<textarea name="contents" id="contents" rows="3" cols="40" th:field="*{contents}"></textarea><br>
+			<div th:if="${#fields.hasErrors('contents')}" th:errors="*{contents}"}></div>
 			
 			<input type="submit" value="確認ページへ">
 		</form>
