--- a/src/main/resources/templates/survey/form.html
+++ b/src/main/resources/templates/survey/form.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
-
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title th:text="${title}">Insert title here</title>
+	</head>
+	<body>
+		<h1 th:text="${title}">title</h1>
+	</body>
 </html>
