--- a/src/main/resources/templates/survey/form.html
+++ b/src/main/resources/templates/survey/form.html
@@ -6,5 +6,22 @@
 	</head>
 	<body>
 		<h1 th:text="${title}">title</h1>
+		
+		<form>
+			<label for="age">年齢</label>
+			<input id="age" name="age" type="number"><br>
+			
+			<label for="satisfaction">満足度：</label>
+			<input id="satisfaction" name="satisfaction" type="radio" value="1">1
+			<input id="satisfaction" name="satisfaction" type="radio" value="2">2
+			<input id="satisfaction" name="satisfaction" type="radio" value="3">3
+			<input id="satisfaction" name="satisfaction" type="radio" value="4">4
+			<input id="satisfaction" name="satisfaction" type="radio" value="5">5<br>
+			
+			<label for="comment">コメント：</label>
+			<textarea id="comment" name="comment" rows="3" cols="40"></textarea><br>
+			
+			<input type="submit" value="詳細ページへ">
+		</form>
 	</body>
 </html>
