--- a/src/main/resources/templates/survey/form.html
+++ b/src/main/resources/templates/survey/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8">
 		<title th:text="${title}">Insert title here</title>
@@ -7,7 +7,7 @@
 	<body>
 		<h1 th:text="${title}">title</h1>
 		
-		<form>
+		<form method="post" action="#" th:action="@{/survey/confirm}" th:object="${surveyForm}">
 			<label for="age">年齢</label>
 			<input id="age" name="age" type="number"><br>
 			
