--- a/src/main/resources/templates/survey/confirm.html
+++ b/src/main/resources/templates/survey/confirm.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
-
-</body>
+<html xmlns:th="http://www.thymeleaf.org">
+	<head>
+		<meta charset="UTF-8">
+		<title>Insert title here</title>
+	</head>
+	<body>
+		<p>Please check your form</p>
+		<div th:object="${surveyForm}">
+			<p th:text="*{age}"></p>
+			<p th:text="*{satisfaction}"></p>
+			<p th:text="*{comment}"></p>
+			<form method="post" action="#" th:action="@{/survey/form}">
+				<input type="hidden" name="age" th:value="*{age}">
+				
+				<input type="hidden" name="satisfaction" th:value="*{satisfaction == 1}">
+				<input type="hidden" name="satisfaction" th:value="*{satisfaction == 2}">
+				<input type="hidden" name="satisfaction" th:value="*{satisfaction == 3}">
+				<input type="hidden" name="satisfaction" th:value="*{satisfaction == 4}">
+				<input type="hidden" name="satisfaction" th:value="*{satisfaction == 5}">
+				
+				<input type="hidden" name="comment" th:value="*{comment}">
+				
+				<input type="submit" value="戻る">
+			</form>
+		</div>
+	</body>
 </html>
