--- a/src/main/resources/templates/survey/confirm.html
+++ b/src/main/resources/templates/survey/confirm.html
@@ -10,6 +10,8 @@
 			<p th:text="*{age}"></p>
 			<p th:text="*{satisfaction}"></p>
 			<p th:text="*{comment}"></p>
+			
+			<!-- confirmページからformページへ戻るフォーム -->
 			<form method="post" action="#" th:action="@{/survey/form}">
 				<input type="hidden" name="age" th:value="*{age}">
 				
@@ -22,6 +24,21 @@
 				<input type="hidden" name="comment" th:value="*{comment}">
 				
 				<input type="submit" value="戻る">
+			</form>
+			
+			<!-- confirmページから本送信するフォーム -->
+			<form method="post" action="#" th:action="@{/survey/complete}">
+				<input type="hidden" name="age" th:value="*{age}">
+				
+				<input type="hidden" name="satisfaction" th:value="*{satisfaction == 1}">
+				<input type="hidden" name="satisfaction" th:value="*{satisfaction == 2}">
+				<input type="hidden" name="satisfaction" th:value="*{satisfaction == 3}">
+				<input type="hidden" name="satisfaction" th:value="*{satisfaction == 4}">
+				<input type="hidden" name="satisfaction" th:value="*{satisfaction == 5}">
+				
+				<input type="hidden" name="comment" th:value="*{comment}">
+				
+				<input type="submit" value="送信！">
 			</form>
 		</div>
 	</body>
