--- a/src/main/resources/templates/survey/form.html
+++ b/src/main/resources/templates/survey/form.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<h1 th:text="${title}">title</h1>
+		<h2 th:text="${complete}"></h2>
 		
 		<form method="post" action="#" th:action="@{/survey/confirm}" th:object="${surveyForm}">
 			<label for="age">年齢</label>
