--- a/src/main/resources/templates/survey/form.html
+++ b/src/main/resources/templates/survey/form.html
@@ -11,6 +11,7 @@
 		<form method="post" action="#" th:action="@{/survey/confirm}" th:object="${surveyForm}">
 			<label for="age">年齢</label>
 			<input id="age" name="age" type="number" th:field="*{age}"><br>
+			<div th:if="${#fields.hasErrors('age')}" th:errors="*{age}"></div>
 			
 			<label for="satisfaction">満足度：</label>
 			<input id="satisfaction" name="satisfaction" type="radio" value="1" th:checked="*{satisfaction == 1}">1
@@ -18,10 +19,11 @@
 			<input id="satisfaction" name="satisfaction" type="radio" value="3" th:checked="*{satisfaction == 3}">3
 			<input id="satisfaction" name="satisfaction" type="radio" value="4" th:checked="*{satisfaction == 4}">4
 			<input id="satisfaction" name="satisfaction" type="radio" value="5" th:checked="*{satisfaction == 5}">5<br>
+			<div th:if="${#fields.hasErrors('satisfaction')}" th:errors="*{satisfaction}"}></div>
 			
 			<label for="comment">コメント：</label>
 			<textarea id="comment" name="comment" rows="3" cols="40" th:field="*{comment}"></textarea><br>
-			
+			<div th:if="${#fields.hasErrors('comment')}" th:errors="*{comment}"></div>
 			<input type="submit" value="詳細ページへ">
 		</form>
 	</body>
