--- a/src/main/resources/templates/survey/form.html
+++ b/src/main/resources/templates/survey/form.html
@@ -14,11 +14,11 @@
 			<div th:if="${#fields.hasErrors('age')}" th:errors="*{age}"></div>
 			
 			<label for="satisfaction">満足度：</label>
-			<input id="satisfaction" name="satisfaction" type="radio" value="1" th:checked="*{satisfaction == 1}">1
-			<input id="satisfaction" name="satisfaction" type="radio" value="2" th:checked="*{satisfaction == 2}">2
-			<input id="satisfaction" name="satisfaction" type="radio" value="3" th:checked="*{satisfaction == 3}">3
-			<input id="satisfaction" name="satisfaction" type="radio" value="4" th:checked="*{satisfaction == 4}">4
-			<input id="satisfaction" name="satisfaction" type="radio" value="5" th:checked="*{satisfaction == 5}">5<br>
+			<input name="satisfaction" type="radio" value="1" th:checked="*{satisfaction == 1}">1
+			<input name="satisfaction" type="radio" value="2" th:checked="*{satisfaction == 2}">2
+			<input name="satisfaction" type="radio" value="3" th:checked="*{satisfaction == 3}">3
+			<input name="satisfaction" type="radio" value="4" th:checked="*{satisfaction == 4}">4
+			<input name="satisfaction" type="radio" value="5" th:checked="*{satisfaction == 5}">5<br>
 			<div th:if="${#fields.hasErrors('satisfaction')}" th:errors="*{satisfaction}"}></div>
 			
 			<label for="comment">コメント：</label>
